--- a/Практическая_работа_1.ipynb
+++ b/Практическая_работа_1.ipynb
@@ -84,7 +84,7 @@
     "y=30.67\n",
     "a=5\n",
     "k_to=5 \n",
-    "print(\"Приветикииии\")\n",
+    "print(\"ЕЕЕЕЕЕЕЕЕЕЕЕЕЕЕЕ\")\n",
     "print(\"x = \", x, \", type(x) = \", type(x))\n",
     "print(\"y = \", y, \", type(y) = \", type(y))\n",
     "print(\"k_to = \", k_to, \", type(k_to) = \", type(k_to))\n",
