--- a/Untitled4.ipynb
+++ b/Untitled4.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPFiLA1iIuHIwiJw+PLA7Zp",
+      "authorship_tag": "ABX9TyP2JA0APCfaZTkja7Tl7PAL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
-        "id": "A35hrLvTwk6P"
+        "id": "A35hrLvTwk6P",
+        "outputId": "8c1f9fbb-8d6d-43da-9315-0bce29d068b9",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "outputs": [],
-      "source": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "njnjbibv\n"
+          ]
+        }
+      ],
+      "source": [
+        "print('njnjbibv')"
+      ]
     }
   ]
 }
